feat: add node controller

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,97 +20,7 @@
     <!-- Nodes -->
     <div class="components">
       <p class="label">NODES</p>
-      <ul class="component-list">
-        <li class="component active">
-          <p>Node 1</p>
-        </li>
-        <li class="component">
-          <p>Node 2</p>
-        </li>
-        <li class="component">
-          <p>Node 3</p>
-        </li>
-        <li class="component">
-          <p>Node 4</p>
-        </li>
-        <li class="component">
-          <p>Node 5</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
-        <li class="component">
-          <p>Node 6</p>
-        </li>
+      <ul id="node-list" class="component-list">
       </ul>
     </div>
   </section>
@@ -210,6 +120,8 @@
       </div>
     </section>
   </main>
+
+  <script type="module" src="./scripts/main.js"></script>
 </body>
 
 </html>
