feat: add log controller

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,91 +28,7 @@
   <main>
     <!-- Logs -->
     <section class="logs-container">
-      <div class="logs">
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
-        <p>This is a log</p>
-        <p>foo</p>
-        <p>bar</p>
-        <p>npm i everything</p>
-        <p>hello world</p>
-        <p>blablabla blablabla blablabal</p>
-        <p>Lorem ipsum</p>
+      <div id="log-msg" class="logs">
       </div>
 
       <div class="input-container">
